fix spacing in footer

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,6 +27,7 @@
   align-items: center;
   flex-grow: 1;
   margin-right: 1rem;
+  gap: 0.3rem;
 }
 
 .title a {
@@ -89,6 +90,16 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+}
+
+.icon {
+  display: inline;
+  margin-right: 1rem;
+  font-size: 1.5rem;
+}
+
+.card h2 {
+  display: inline;
 }
 
 .card:hover,
